--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <!-- Карточка с фото 2 -->
         <div class="photo-card">
-            <img src="https://source.unsplash.com/random/800x600?city" alt="Город" class="photo-img">
+            <img src="https://github.com/samposa1337/myphoto.github.io/blob/main/5201728531518844125.jpg?raw=true" alt="Город" class="photo-img">
             <div class="photo-description">
                 <h3>Город</h3>
                 <p>Ночной город с огнями</p>
